// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AISummaryCard (snapshot) > renders with summary 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border shadow-sm p-4"
  data-slot="card"
>
  <div
    class="mb-3 flex items-center gap-2 text-sm font-medium"
  >
    <span>
      AI Feedback Summary
    </span>
    <span
      class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 gap-1"
      data-slot="badge"
    >
      <svg
        class="h-3.5 w-3.5"
        data-icon="bot"
      />
       AI Generated
    </span>
  </div>
  <div
    class="mb-4"
  >
    <div
      class="mb-1 text-xs text-muted-foreground"
    >
      75% Positive
    </div>
    <div>
      <div
        class="h-2 w-full overflow-hidden rounded-full bg-muted"
      >
        <div
          class="h-full rounded-full bg-emerald-500 transition-all"
          style="width: 75%;"
        />
      </div>
    </div>
  </div>
  <div
    class="space-y-4"
  >
    <section
      class="rounded-md bg-muted/40 p-3"
    >
      <div
        class="mb-2 flex items-center gap-2 text-sm font-semibold"
      >
        <svg
          class="h-4 w-4 text-emerald-500"
          data-icon="check"
        />
        <span>
          Top Highlights
        </span>
      </div>
      <ul
        class="list-inside space-y-2 text-sm text-muted-foreground"
      >
        <li
          class="flex gap-2"
        >
          <span
            class="select-none"
          >
            •
          </span>
          <span>
            A
          </span>
        </li>
      </ul>
    </section>
    <section
      class="rounded-md bg-muted/40 p-3"
    >
      <div
        class="mb-2 flex items-center gap-2 text-sm font-semibold"
      >
        <svg
          class="h-4 w-4 text-red-500"
          data-icon="alert"
        />
        <span>
          Areas for Improvement
        </span>
      </div>
      <ul
        class="list-inside space-y-2 text-sm text-muted-foreground"
      >
        <li
          class="flex gap-2"
        >
          <span
            class="select-none"
          >
            •
          </span>
          <span>
            B
          </span>
        </li>
      </ul>
    </section>
  </div>
</div>
`;

exports[`AISummaryCard (snapshot) > renders without summary 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border shadow-sm p-4"
  data-slot="card"
>
  <div
    class="mb-3 flex items-center gap-2 text-sm font-medium"
  >
    <span>
      AI Feedback Summary
    </span>
    <span
      class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 gap-1"
      data-slot="badge"
    >
      <svg
        class="h-3.5 w-3.5"
        data-icon="bot"
      />
       AI Generated
    </span>
  </div>
  <div
    class="mb-4"
  >
    <div
      class="mb-1 text-xs text-muted-foreground"
    >
      Summary unavailable
    </div>
    <div>
      <div
        class="h-2 w-full overflow-hidden rounded-full bg-muted"
      >
        <div
          class="h-full rounded-full bg-emerald-500 transition-all"
          style="width: 0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="space-y-4"
  >
    <section
      class="rounded-md bg-muted/40 p-3"
    >
      <div
        class="mb-2 flex items-center gap-2 text-sm font-semibold"
      >
        <svg
          class="h-4 w-4 text-emerald-500"
          data-icon="check"
        />
        <span>
          Top Highlights
        </span>
      </div>
      <ul
        class="list-inside space-y-2 text-sm text-muted-foreground"
      >
        <li
          class="flex gap-2"
        >
          <span
            class="select-none"
          >
            •
          </span>
          <span>
            —
          </span>
        </li>
      </ul>
    </section>
    <section
      class="rounded-md bg-muted/40 p-3"
    >
      <div
        class="mb-2 flex items-center gap-2 text-sm font-semibold"
      >
        <svg
          class="h-4 w-4 text-red-500"
          data-icon="alert"
        />
        <span>
          Areas for Improvement
        </span>
      </div>
      <ul
        class="list-inside space-y-2 text-sm text-muted-foreground"
      >
        <li
          class="flex gap-2"
        >
          <span
            class="select-none"
          >
            •
          </span>
          <span>
            —
          </span>
        </li>
      </ul>
    </section>
  </div>
</div>
`;
